# cv_inspector_baxter

./: CMakeLists.txt  README.md  package.xml
launch/: pcl_extract.launch
src/: cluster_extractor.cpp
